--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,9 @@ jobs:
     - name: Install dependencies
       run: poetry install
 
+
     - name: Install CMake
-      uses: jwlawson/actions-setup-cmake@v3
-      with:
-        cmake-version: '3.21.1'
+      uses: lukka/get-cmake@latest
 
     - name: Build with CMake
       run: |
