fixing windows build issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,20 @@ project(screamer VERSION 0.1.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# Force the use of /MDd for Debug and /MD for Release
+if (MSVC)
+    # Remove /MTd and /MT from Debug flags
+    string(REGEX REPLACE "/MTd" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
+    # Add /MDd to Debug flags
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
+
+    # Remove /MT and /MTd from Release flags
+    string(REGEX REPLACE "/MT" "" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
+    # Add /MD to Release flags
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
+endif()
+
+
 # Include FetchContent module
 include(FetchContent)
 
@@ -30,8 +44,23 @@ FetchContent_Declare(
   GIT_TAG        release-1.12.1  # Specify the desired version
 )
 
+
 # Make Google Test available
 FetchContent_MakeAvailable(googletest)
+
+# Prevent Google Test from overriding our compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+if (MSVC)
+    set_target_properties(gtest PROPERTIES
+        CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}"
+        CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}"
+    )
+    set_target_properties(gtest_main PROPERTIES
+        CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}"
+        CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}"
+    )
+endif()
 
 # Enable testing
 enable_testing()
