pipeline OS compatile DIR command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,12 @@ jobs:
         cmake --build .
 
     - name: List screamer directory
+      if: runner.os != 'Windows'
+      run: |
+        ls -la screamer
+  
+    - name: List screamer directory
+      if: runner.os == 'Windows'
       run: |
         dir screamer
 
