--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,5 @@ pybind11 = "^2.9"
 pytest = "^7.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0", "cmake", "pybind11"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools", "wheel", "pybind11", "scikit-build"]
+build-backend = "setuptools.build_meta"
