--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,10 @@ on:
   push:
     tags: 'v*'
 
+permissions:
+  contents: read
+  id-token: write  # Required for PyPI Trusted Publishers
+
 jobs:
   build_and_publish:
     runs-on: ${{ matrix.os }}
@@ -24,15 +28,19 @@ jobs:
         python -m pip install --upgrade pip
         pip install cibuildwheel==2.14.1
 
+    # Install build dependencies
+    - name: Install build dependencies
+      run: |
+        python -m pip install scikit-build cmake ninja pybind11
+
     - name: Build wheels
       env:
         CIBW_BUILD_VERBOSITY: 1
-        CIBW_SKIP: cp27-*
-        CIBW_BEFORE_BUILD: python -m pip install --upgrade pip
+        CIBW_BEFORE_BUILD: python -m pip install scikit-build cmake ninja pybind11
+        CIBW_BUILD: cp39-* cp310-* cp311-*
         CIBW_TEST_COMMAND: ""
       run: |
         cibuildwheel --output-dir wheelhouse
-
 
     - name: Publish to PyPI via Trusted Publishers
       uses: pypa/gh-action-pypi-publish@release/v1
@@ -41,3 +49,4 @@ jobs:
       env:
         # The PyPI Publisher ID provided by PyPI after configuration
         PYPI_PUBLISHER_ID: ${{ secrets.PYPI_PUBLISHER_ID }}
+
