--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ pybind11 = "^2.9"
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
 
+[tool.poetry.group.dev.dependencies]
+wheel = "^0.44.0"
+build = "^1.2.2.post1"
+
 [build-system]
-requires = ["setuptools", "wheel", "pybind11", "scikit-build"]
+requires = ["setuptools", "wheel", "scikit-build", "cmake", "pybind11"]
 build-backend = "setuptools.build_meta"
