--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest = "^7.0"
 [tool.poetry.group.dev.dependencies]
 wheel = "^0.44.0"
 build = "^1.2.2.post1"
+bump2version = "^1.0.1"
 
 [tool.pytest.ini_options]
 addopts = "--ignore=_skbuild"
