--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -11,7 +11,7 @@ replace = __version__ = "{new_version}"
 
 [bumpversion:file:setup.py]
 search = version="{current_version}"
-replace = version="{new_version}",
+replace = version="{new_version}"
 
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
