--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ permissions:
   id-token: write  # Required for PyPI Trusted Publishers
 
 jobs:
-  build_and_publish:
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -42,11 +42,36 @@ jobs:
       run: |
         cibuildwheel --output-dir wheelhouse
 
+    - name: Upload wheels
+      uses: actions/upload-artifact@v3
+      with:
+        name: wheels-${{ matrix.os }}
+        path: wheelhouse/*.whl
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Download wheels
+      uses: actions/download-artifact@v3
+      with:
+        name: wheels-ubuntu-latest
+    - uses: actions/download-artifact@v3
+      with:
+        name: wheels-macos-latest
+    - uses: actions/download-artifact@v3
+      with:
+        name: wheels-windows-latest
+
+    - name: Combine wheels
+      run: |
+        mkdir all_wheels
+        mv **/*.whl all_wheels/
+
     - name: Publish to PyPI via Trusted Publishers
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        packages_dir: ./wheelhouse
-      env:
-        # The PyPI Publisher ID provided by PyPI after configuration
-        PYPI_PUBLISHER_ID: ${{ secrets.PYPI_PUBLISHER_ID }}
-
+        packages-dir: ./all_wheels
