--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest = "^7.0"
 wheel = "^0.44.0"
 build = "^1.2.2.post1"
 bump2version = "^1.0.1"
+invoke = "^2.2.0"
 
 [tool.pytest.ini_options]
 addopts = "--ignore=_skbuild"
