--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -16,3 +16,7 @@ replace = version="{new_version}"
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
 replace = version = "{new_version}"
+
+[bumpversion:file:CMakeLists.txt]
+search = project(screamer VERSION {current_version} LANGUAGES CXX)
+replace = project(screamer VERSION {new_version} LANGUAGES CXX)
