--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.15)
 project(screamer VERSION 0.1.4 LANGUAGES CXX)
 
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+endif()
+
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
@@ -31,6 +35,9 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 # Make Google Test available
 FetchContent_MakeAvailable(googletest)
 
+# Find Python and Development libraries
+find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
+
 # Add source files
 file(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/src/screamer/*.cpp")
 
@@ -40,14 +47,31 @@ message(STATUS "SOURCES found: ${SOURCES}")
 # Create the core library
 add_library(screamer_core ${SOURCES})
 set_target_properties(screamer_core PROPERTIES POSITION_INDEPENDENT_CODE ON)
-target_include_directories(screamer_core PUBLIC "${CMAKE_SOURCE_DIR}/include")
+
+# Link the core library with pybind11
+target_link_libraries(screamer_core PRIVATE pybind11::module Python3::Python)
+
+# Set include directories for screamer_core
+target_include_directories(screamer_core PUBLIC
+  "${CMAKE_SOURCE_DIR}/include"
+  "${pybind11_INCLUDE_DIRS}"
+)
 
 # Create the Python module
 pybind11_add_module(screamer_bindings MODULE bindings/screamer_bindings.cpp)
-target_link_libraries(screamer_bindings PRIVATE screamer_core)
 
-# Install the module into the Python package directory
-install(TARGETS screamer_bindings DESTINATION .)
+# Link the Python module with the core library and pybind11
+target_link_libraries(screamer_bindings PRIVATE screamer_core pybind11::module Python3::Python)
+
+# Install the Python module to the screamer package directory
+#install(TARGETS screamer_bindings
+#        LIBRARY DESTINATION screamer
+#        RUNTIME DESTINATION screamer
+#        ARCHIVE DESTINATION screamer
+#)
+
+# Ensure that the output directory is set to the directory specified by setuptools
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH})
 
 # Enable testing
 enable_testing()
