--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ wheel = "^0.44.0"
 build = "^1.2.2.post1"
 bump2version = "^1.0.1"
 invoke = "^2.2.0"
-
+numpy = { version = "^2.0.1", python = ">=3.10"}
 [tool.pytest.ini_options]
 addopts = "--ignore=_skbuild"
 
