--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,27 +14,16 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-
+        python-version: ['3.9', '3.10', '3.11']
+    
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
-
-    # Install Python development headers for Ubuntu
-    - name: Install Python development headers (Linux only)
-      if: matrix.os == 'ubuntu-latest'
-      run: sudo apt-get update && sudo apt-get install -y python3-dev
-
-    # Install equivalent packages for macOS and Windows if necessary
-    - name: Install dependencies for macOS
-      if: matrix.os == 'macos-latest'
-      run: brew install python@3.9  # Adjust version as needed
-
-    # For Windows, the setup-python action should already provide Python libraries.
-    
+        python-version: ${{ matrix.python-version }}
+     
     - name: Install cibuildwheel
       run: |
         python -m pip install --upgrade pip
