--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,21 +13,17 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.9', '3.10', '3.11']
-    
-    steps:
-    - uses: actions/checkout@v3
+        os: [ubuntu-latest, windows-latest, macos-13, macos-latest]
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-     
+
+    steps:
+    - uses: actions/checkout@v4   
+
+    # Used to host cibuildwheel
+    - uses: actions/setup-python@v5
+
     - name: Install cibuildwheel
-      run: |
-        python -m pip install --upgrade pip
-        pip install cibuildwheel==2.14.1
+      run: python -m pip install cibuildwheel==2.21.3
 
     # Install build dependencies
     - name: Install build dependencies
@@ -54,7 +50,7 @@ jobs:
     needs: build
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Download wheels
       uses: actions/download-artifact@v3
