--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,18 +22,25 @@ jobs:
     # Used to host cibuildwheel
     - uses: actions/setup-python@v5
 
-    - name: Install cibuildwheel
-      run: python -m pip install cibuildwheel==2.21.3
+    # Install Python development headers for Linux (Ubuntu)
+    - name: Install Python dev headers (Linux only)
+      if: matrix.os == 'ubuntu-latest'
+      run: sudo apt-get update && sudo apt-get install -y python3-dev
 
-    # Install build dependencies
-    - name: Install build dependencies
+    # Install development tools for macOS if needed
+    - name: Install dependencies for macOS
+      if: matrix.os == 'macos-latest'
+      run: brew install python@3.9  # Adjust this as necessary for your project
+
+    # Install cibuildwheel and build dependencies for all platforms
+    - name: Install cibuildwheel and build dependencies
       run: |
-        python -m pip install scikit-build cmake ninja pybind11
+        python -m pip install --upgrade pip
+        pip install cibuildwheel==2.21.3 scikit-build cmake ninja pybind11
 
     - name: Build wheels
       env:
         CIBW_BUILD_VERBOSITY: 1
-        CIBW_BEFORE_BUILD: python -m pip install scikit-build cmake ninja pybind11
         CIBW_BUILD: cp39-* cp310-* cp311-*
         CIBW_TEST_COMMAND: ""
       run: |
