--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(screamer VERSION 0.1.9 LANGUAGES CXX)
+project(screamer VERSION 0.1.8 LANGUAGES CXX)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
@@ -49,20 +49,19 @@ add_library(screamer_core ${SOURCES})
 set_target_properties(screamer_core PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 # Link the core library with pybind11
-target_link_libraries(screamer_core PRIVATE pybind11::module)
+target_link_libraries(screamer_core PRIVATE pybind11::module Python3::Python)
 
 # Set include directories for screamer_core
 target_include_directories(screamer_core PUBLIC
   "${CMAKE_SOURCE_DIR}/include"
   "${pybind11_INCLUDE_DIRS}"
-  "${Python3_INCLUDE_DIRS}"
 )
 
 # Create the Python module
 pybind11_add_module(screamer_bindings MODULE bindings/screamer_bindings.cpp)
 
 # Link the Python module with the core library and pybind11
-target_link_libraries(screamer_bindings PRIVATE screamer_core pybind11::module)
+target_link_libraries(screamer_bindings PRIVATE screamer_core pybind11::module Python3::Python)
 
 # Install the module into the Python package directory
 install(TARGETS screamer_bindings DESTINATION .)
