--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,6 +41,10 @@ jobs:
     - name: Build wheels
       env:
         CIBW_BUILD_VERBOSITY: 1
+        CIBW_BEFORE_BUILD: |
+          if [[ "$CIBW_PLATFORM" == "linux" ]]; then
+            yum install -y python3-devel;
+          fi
         CIBW_BUILD: cp39-* cp310-* cp311-*
         CIBW_TEST_COMMAND: ""
       run: |
