--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Build wheels
       env:
         CIBW_BUILD_VERBOSITY: 1
-        CIBW_BEFORE_BUILD: sudo apt-get install -y python3-devel
+        CIBW_BEFORE_BUILD: yum install -y python3-devel
         CIBW_BUILD: cp39-* cp310-* cp311-*
         CIBW_TEST_COMMAND: ""
       run: |
