--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ FetchContent_MakeAvailable(googletest)
 #message(STATUS "Python_LIBRARIES: ${Python_LIBRARIES}")
 #message(STATUS "Python_INCLUDE_DIRS: ${Python_INCLUDE_DIRS}")
 
-# set(Python3_USE_STATIC_LIBS TRUE)
+set(Python3_USE_STATIC_LIBS TRUE)
 find_package(Python3 COMPONENTS Interpreter Development.Module REQUIRED)
 message(STATUS "Python3_FOUND: ${Python3_FOUND}")
 message(STATUS "Python3_Interpreter_FOUND: ${Python3_Interpreter_FOUND}")
@@ -62,6 +62,8 @@ message(STATUS "Python3_Development.SABIModule_FOUND: ${Python3_Development.SABI
 message(STATUS "Python3_LIBRARIES: ${Python3_LIBRARIES}")
 message(STATUS "Python3_LIBRARY_DIRS: ${Python3_LIBRARY_DIRS}")
 message(STATUS "Python3_RUNTIME_LIBRARY_DIRS: ${Python3_RUNTIME_LIBRARY_DIRS}")
+message(STATUS "Python3_SABI_LIBRARIES: ${Python3_SABI_LIBRARIES}")
+message(STATUS "Python3_LIBRARY: ${Python3_LIBRARY}")
 
 
 
