--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,12 @@ jobs:
     # Used to host cibuildwheel
     - uses: actions/setup-python@v5
 
+    # Install cibuildwheel and build dependencies for all platforms
+    - name: Install cibuildwheel and build dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install cibuildwheel==2.21.3 scikit-build cmake ninja pybind11
+
     - name: Build wheels
       env:
         CIBW_BUILD_VERBOSITY: 1
