--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,7 @@ add_library(screamer_core ${SOURCES})
 set_target_properties(screamer_core PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 # Link the core library with pybind11
-target_link_libraries(screamer_core PRIVATE pybind11::module})
+target_link_libraries(screamer_core PRIVATE pybind11::module)
 
 # Set include directories for screamer_core
 target_include_directories(screamer_core PUBLIC
