--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ mainx ]
   pull_request:
-    branches: [ main ]
+    branches: [ mainx ]
 
 jobs:
   build:
