--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,7 @@ jobs:
       env:
         CIBW_BUILD_VERBOSITY: 1
         CIBW_BUILD: cp39-* cp310-* cp311-*
+        CIBW_BEFORE_BUILD: yum install -y python-dev
         CIBW_TEST_COMMAND: ""
       run: |
         cibuildwheel --output-dir wheelhouse
