--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-13, macos-latest]
+        os: [ubuntu-latest] #, windows-latest, macos-13, macos-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -22,6 +22,7 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_BUILD_VERBOSITY: 1
+          CIBW_BEFORE_BUILD: yum install -y python-dev
           CIBW_BUILD: cp311-*
 
  
