--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,35 @@
+[project]
+name = "screamer"
+version = "0.1.28"
+requires-python = ">= 3.9"
+authors = [
+  {name = "Thijs van den Berg", email = "thijs@sitmo.com"},
+  {name = "Mohammadjavad Vakili", email = "mohammadjavad.vakili@gmail.com"}
+]
+maintainers = [
+  {name = "Thijs van den Berg", email = "thijs@sitmo.com"},
+  {name = "Mohammadjavad Vakili", email = "mohammadjavad.vakili@gmail.com"}
+]
+description = "Screamingly fast streaming indicators with C++ performance and Python simplicity."
+readme = "README.md"
+license = "MIT"
+dependencies = [
+  "pybind11^2.9"
+]
+
 [tool.poetry]
 name = "screamer"
 version = "0.1.28"
 description = "Screamingly fast streaming indicators with C++ performance and Python simplicity."
-
-authors = ["Thijs van den Berg <thijs@sitmo.com>, Mohammadjavad Vakili <Mohammadjavad.Vakili@shell.com>"]
-
+authors = ["Thijs van den Berg <thijs@sitmo.com>, Mohammadjavad Vakili <mohammadjavad.vakili@gmail.com>"]
 maintainers = [
     "Thijs van den Berg <thijs@sitmo.com>", 
     "Mohammadjavad Vakili <mohammadjavad.vakili@gmail.com>" 
 ]
-
-
 license = "MIT"
 readme = "README.md"
 packages = [{ include = "screamer" }]
+
 
 [tool.poetry.dependencies]
 python = "^3.9"
