--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest] #, windows-latest, macos-13, macos-latest
+        os: [ubuntu-lates, windows-latest, macos-13, macos-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -22,7 +22,4 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_BUILD_VERBOSITY: 1
-          # CIBW_BEFORE_BUILD: yum install -y python-devel
-          CIBW_BUILD: cp311-*
-
- 
+          CIBW_BUILD: cp39-* cp310-* cp311-*
