--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -23,3 +23,5 @@ jobs:
         env:
           CIBW_BUILD_VERBOSITY: 1
           CIBW_BUILD: cp39-* cp310-* cp311-*
+          CIBW_TEST_REQUIRES: pytest
+          CIBW_TEST_COMMAND: "pytest {project}/tests"
