--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-lates, windows-latest, macos-13, macos-latest]
+        os: [ubuntu-lates] #, windows-latest, macos-13, macos-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -22,6 +22,6 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_BUILD_VERBOSITY: 1
-          CIBW_BUILD: cp39-* cp310-* cp311-*
+          CIBW_BUILD: cp39-* #cp310-* cp311-*
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: "pytest {project}/tests"
