--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -25,3 +25,9 @@ jobs:
           CIBW_BUILD: cp39-* #cp310-* cp311-*
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: "pytest {project}/tests"
+
+      - name: Install built wheel
+        run: pip install wheelhouse/*.whl
+
+      - name: Run tests on installed wheel
+        run: pytest {project}/tests
