--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,41 +1,31 @@
-name: CI
+name: CI, build a Linux wheel and run pytest
 
 on:
   push:
-    branches: [ mainx ]
+    branches: [ main ]
   pull_request:
-    branches: [ mainx ]
+    branches: [ main ]
 
 jobs:
-  build:
-
+  build_wheels:
+    name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ macos-latest, ubuntu-latest]
-        python-version: [ '3.11']
+        os: [ubuntu-latest] #, windows-latest, macos-13, macos-latest]
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
+      - uses: actions/setup-python@v5
 
-    - name: Install build dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install scikit-build cmake ninja pybind11 pytest
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.21.3
 
-    - name: Build and install the package
-      run: |
-        pip install . -v
-
-    - name: Run C++ Tests
-      run: |
-        ctest --output-on-failure
-
-    - name: Run Python Tests
-      run: |
-        pytest
+      - name: Build and test wheels
+        run: python -m cibuildwheel --output-dir wheelhouse
+        env:
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_BUILD: cp311-* #cp39-* cp310-* cp311-*
+          CIBW_TEST_REQUIRES: pytest
+          CIBW_TEST_COMMAND: "pytest {project}/tests"
