--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,37 +10,33 @@ permissions:
 
 jobs:
   build:
+    name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
-
+        os: [ubuntu-latest, windows-latest, macos-13, macos-latest]
 
     steps:
-    - uses: actions/checkout@v4   
+      - uses: actions/checkout@v4
 
-    # Used to host cibuildwheel
-    - uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
 
-    # Install cibuildwheel and build dependencies for all platforms
-    - name: Install cibuildwheel and build dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install cibuildwheel==2.21.3 scikit-build cmake ninja pybind11
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.21.3
 
-    - name: Build wheels
-      env:
-        CIBW_BUILD_VERBOSITY: 1
-        CIBW_BUILD: cp39-* cp310-* cp311-*
-        CIBW_TEST_COMMAND: ""
-      run: |
-        cibuildwheel --output-dir wheelhouse
+      - name: Build and test wheels
+        run: python -m cibuildwheel --output-dir wheelhouse
+        env:
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_BUILD: cp39-* cp310-* cp311-*
+          CIBW_TEST_REQUIRES: pytest
+          CIBW_TEST_COMMAND: "pytest {project}/tests"
 
-    - name: Upload wheels
-      uses: actions/upload-artifact@v3
-      with:
-        name: wheels-${{ matrix.os }}
-        path: wheelhouse/*.whl
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels-${{ matrix.os }}
+          path: wheelhouse/*.whl
 
   publish:
     runs-on: ubuntu-latest
