--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -1,6 +1,6 @@
 name: Temp
 
-on: [push, pull_request]
+on: [pushx, pull_requestx]
 
 jobs:
   build_wheels:
@@ -25,9 +25,3 @@ jobs:
           CIBW_BUILD: cp39-* #cp310-* cp311-*
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: "pytest {project}/tests"
-
-      - name: Install built wheel
-        run: pip install wheelhouse/*manylinux*_x86_64.whl
-
-      - name: Run tests on installed wheel
-        run: pytest {project}/tests
