fix doc action dependencies installation, and changed the trigger to manual

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,9 +1,8 @@
 name: Documentation
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+  
 
 jobs:
   docs:
@@ -17,16 +16,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          pip install sphinx sphinx-autodoc-typehints breathe sphinx_rtd_theme
-
-      - name: Build documentation
-        run: |
-          cd docs
-          make html
 
       - name: Install Poetry
         run: |
