--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -19,4 +19,4 @@ build:
 
 # Build documentation in the docs directory with Sphinx
 sphinx:
-  configuration: docs/source/conf.py
+  configuration: docs/conf.py
