--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -28,12 +28,11 @@ replace = release = '{new_version}'
 
 [bumpversion:file:CHANGELOG.md] 
 search = 
-## [Unreleased] - yyyy-mm-dd
+        [Unreleased] - yyyy-mm-dd
+        -------------------------
 replace = 
-## [Unreleased] - yyyy-mm-dd
-
-### Added
-
-### Fixed
-
-## Version v{new_version} ({now:%Y-%m-%d}) 
+        [Unreleased] - yyyy-mm-dd
+        -------------------------
+        
+        Version v{new_version} ({now:%Y-%m-%d}) 
+        -------------------------
